--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Стиль кодирования Академии HTML</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
     <main><header>
   <a href="https://htmlacademy.ru" target="_blank">
-    <img class="logo" src="/img/logo.svg" width="100" height="127" alt="HTML Academy">
+    <img class="logo" src="img/logo.svg" width="100" height="127" alt="HTML Academy">
   </a>
   <h1>Стиль кодирования Академии HTML</h1>
 </header>
@@ -17,7 +17,7 @@
         <h2>HTML</h2><article class="chapter-part">
   <div class="chapter-part-col"><h4>Синтаксис</h4>
 <ul>
-  <li>Для отступов у&nbsp;вложенных элементов используются два пробела. Для правильного форматирования используйте файл <a href="/files/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
+  <li>Для отступов у&nbsp;вложенных элементов используются два пробела. Для правильного форматирования используйте файл <a href="files/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
   <li>Теги и&nbsp;их&nbsp;атрибуты пишутся строчными буквами. Для значений атрибутов всегда используются двойные кавычки.</li>
   <li>Необязательный закрывающий слеш у&nbsp;одиночных тегов (<code>&lt;img&gt;</code>, <code>&lt;br&gt;</code> и&nbsp;другие) не&nbsp;ставится.</li>
   <li>Необязательные закрывающие теги (например, <code>&lt;/li&gt;</code> или <code>&lt;/body&gt;</code>) не&nbsp;пропускаются.</li>
@@ -272,7 +272,7 @@
   <div class="chapter-part-col"><h4>Синтаксис</h4>
 <ul>
   <li>После значения свойства обязательно ставится точка с&nbsp;запятой.</li>
-  <li>Для отступов внутри правил используются два пробела. Для правильного форматирования используйте файл <a href="/files/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
+  <li>Для отступов внутри правил используются два пробела. Для правильного форматирования используйте файл <a href="files/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
   <li>Шестнадцатеричное значение цвета не&nbsp;сокращается, а&nbsp;пишется полностью из&nbsp;всех шести символов. Для записи используются строчные буквы. Например, <code>#f5f5f5</code>.</li>
   <li>Названия тегов и&nbsp;свойств в&nbsp;правилах пишутся строчными буквами.</li>
   <li>Начальный ноль для значений не&nbsp;сокращается (например, <code>.5</code> вместо <code>0.5</code>).</li>
@@ -288,7 +288,7 @@
 </code></pre></li>
   <li>Закрывающая фигурная скобка пишется на&nbsp;новой строке и&nbsp;без отступа. Следующее после этого правило отделяется пустой строкой.</li>
   <li>Единицы измерения не&nbsp;пишутся, там где в&nbsp;них нет необходимости. Например, <code>border:&nbsp;0</code>.</li>
-  <li>Для автоматического применения этих правил используйте файл конфигурации <a href="/files/csscomb.json">csscomb.json</a> для настройки <a href="http://csscomb.com" target="_blank">CSSComb</a>.</li>
+  <li>Для автоматического применения этих правил используйте файл конфигурации <a href="files/csscomb.json">csscomb.json</a> для настройки <a href="http://csscomb.com" target="_blank">CSSComb</a>.</li>
 </ul>
 </div>
   <div class="chapter-part-col">
@@ -518,7 +518,7 @@ body {
 </section><footer>
   <div class="contacts">
     <a class="logo-full" href="https://htmlacademy.ru">
-      <img src="/img/logo-full.svg" width="161" height="55" alt="HTML Academy">
+      <img src="img/logo-full.svg" width="161" height="55" alt="HTML Academy">
     </a>
     <div class="social-icons">
       <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank">
@@ -543,6 +543,6 @@ body {
 </footer>
 </main>
 
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
