--- a/index.html
+++ b/index.html
@@ -4,18 +4,57 @@
     <meta charset="utf-8">
     <title>Стиль кода Академии HTML</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@htmlacademy_ru">
+    <meta name="twitter:image" content="https://htmlacademy.github.io/codeguide/img/og.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://htmlacademy.github.io/codeguide/">
+    <meta property="og:title" itemprop="name" content="Стиль кода Академии HTML">
+    <meta property="og:image" itemprop="image" content="https://htmlacademy.github.io/codeguide/img/og.png">
   </head>
   <body>
 
     <main><header>
   <a href="https://htmlacademy.ru" target="_blank">
-    <img class="logo" src="img/bane.svg" width="300" alt="HTML Academy" title="HTML Academy">
+    <img class="logo" src="img/bane.svg" width="300" height="300" alt="HTML Academy" title="HTML Academy">
   </a>
   <h1>Стиль кода Академии HTML</h1>
 </header>
 <section class="chapter">
+        <h2>Оглавление</h2>
+        <article class="chapter-part">
+          <div class="chapter-part-col">
+            <h4>HTML</h4>
+            <ul>
+              <li><a href="#html-syntax">Синтаксис</a></li>
+              <li><a href="#html-validator">Валидность</a></li>
+              <li><a href="#html-doctype">HTML-доктайп</a></li>
+              <li><a href="#html-encoding">Кодировка символов</a></li>
+              <li><a href="#html-style-includes">Подключение стилей</a></li>
+              <li><a href="#html-js-includes">Подключение скриптов</a></li>
+              <li><a href="#html-attribute-order">Порядок атрибутов</a></li>
+              <li><a href="#html-boolean">Логические атрибуты</a></li>
+              <li><a href="#html-form-labels">Подписи полей ввода</a></li>
+              <li><a href="#html-img-sizes">Размеры картинок</a></li>
+              <li><a href="#html-language">Атрибут языка</a></li>
+            </ul>
+          </div>
+          <div class="chapter-part-col">
+            <h4>CSS</h4>
+            <ul>
+              <li><a href="#css-syntax">Синтаксис</a></li>
+              <li><a href="#css-order">Порядок свойств</a></li>
+              <li><a href="#css-class-names">Имена классов</a></li>
+              <li><a href="#css-import">Правило @import</a></li>
+              <li><a href="#css-font-variant">Варианты шрифта</a></li>
+            </ul>
+          </div>
+        </article>
+      </section>
+
+      <section class="chapter">
         <h2>HTML</h2><article class="chapter-part">
-  <div class="chapter-part-col"><h4>Синтаксис</h4>
+  <div class="chapter-part-col"><h4 id="html-syntax">Синтаксис</h4>
 <ul>
   <li>Для отступов у&nbsp;вложенных элементов используются два пробела. Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
   <li>Теги и&nbsp;их&nbsp;атрибуты пишутся строчными буквами. Для значений атрибутов всегда используются двойные кавычки.</li>
@@ -23,7 +62,7 @@
   <li>Необязательные закрывающие теги (например, <code>&lt;/li&gt;</code> или <code>&lt;/body&gt;</code>) не&nbsp;пропускаются.</li>
 </ul>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
@@ -47,19 +86,20 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Валидность</h4>
+  <div class="chapter-part-col"><h4 id="html-validator">Валидность</h4>
 <p>
   Документ должен проходить проверку на&nbsp;валидность. Для проверки используется <a href="http://validator.w3.org/nu/" target="_blank">современный валидатор</a>.
 </p>
 </div>
 </article>
+
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>HTML doctype</h4>
+  <div class="chapter-part-col"><h4 id="html-doctype">HTML-доктайп</h4>
 <p>
   В&nbsp;начале страницы обязательно должен быть указан актуальный <code>doctype</code>, чтобы браузер отображал её&nbsp;в&nbsp;режиме соответствия стандартам. Это гарантирует, что страница будет выглядеть единообразно во&nbsp;всех современных браузерах.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
@@ -72,12 +112,12 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Кодировка символов</h4>
+  <div class="chapter-part-col"><h4 id="html-encoding">Кодировка символов</h4>
 <p>
   Кодировка символов на&nbsp;странице всегда должна быть явно указана, чтобы обеспечить корректное отображение текста. Кодировка <code>utf-8</code> предпочтительна.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;head&gt;
   &lt;meta charset="utf-8"&gt;
@@ -89,12 +129,12 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Подключение стилей</h4>
+  <div class="chapter-part-col"><h4 id="html-style-includes">Подключение стилей</h4>
 <p>
   Стилевые файлы с&nbsp;помощью <code>&lt;link&gt;</code> подключаются внутри <code>&lt;head&gt;</code>. При этом атрибут <code>type</code> для тега <code>&lt;link&gt;</code> не&nbsp;указывается, так как его значение <code>text/css</code> устанавливается по&nbsp;умолчанию.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!-- Хорошо: стилевой файл подключён в секции head --&gt;
 &lt;!DOCTYPE html&gt;
@@ -119,7 +159,7 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Подключение скриптов</h4>
+  <div class="chapter-part-col"><h4 id="html-js-includes">Подключение скриптов</h4>
 <p>
   Скрипты должны подключаться в&nbsp;самом низу страницы, чтобы при её&nbsp;загрузке не&nbsp;блокировать отображение содержимого.
 </p>
@@ -127,7 +167,7 @@
   При подключении скриптов в&nbsp;теге <code>&lt;script&gt;</code> атрибут <code>type</code> не&nbsp;указывается, так как его значение <code>text/javascript</code> устанавливается по&nbsp;умолчанию.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!-- Хорошо: скрипт подключается перед &lt;/body&gt; --&gt;
 &lt;!DOCTYPE html&gt;
@@ -153,7 +193,7 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Порядок следования атрибутов</h4>
+  <div class="chapter-part-col"><h4 id="html-attribute-order">Порядок атрибутов</h4>
 <p>
   Атрибут класса у&nbsp;HTML-элементов пишется первым. Единообразное написание помогает легче считывать код и&nbsp;быстрее разбираться в&nbsp;назначении блоков по&nbsp;их&nbsp;классам.
 </p>
@@ -161,7 +201,7 @@
   Остальные атрибуты могут быть расставлены в&nbsp;любом порядке, но&nbsp;тоже единообразно для одинаковых элементов.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;a class="element element-big" id="element" href="/" data-name="element"&gt;Ссылка&lt;/a&gt;
 
@@ -174,12 +214,12 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Логические атрибуты</h4>
+  <div class="chapter-part-col"><h4 id="html-boolean">Логические атрибуты</h4>
 <p>
   Для логических атрибутов (например, <code>checked</code>, <code>disabled</code>, <code>required</code>) значение не&nbsp;указывается, а&nbsp;сами атрибуты указываются последними и&nbsp;в&nbsp;единообразной последовательности во&nbsp;всём документе.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!-- checked="checked" необязательно --&gt;
 &lt;input type="checkbox" required checked&gt;
@@ -195,12 +235,12 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Подписи полей ввода</h4>
+  <div class="chapter-part-col"><h4 id="html-form-labels">Подписи полей ввода</h4>
 <p>
   Для улучшения взаимодействия пользователя с&nbsp;элементами форм, при нажатии на&nbsp;подпись поля, оно должно активироваться. Для этого элемент формы связывается с&nbsp;его описанием с&nbsp;помощью идентификатора и&nbsp;атрибута <code>for</code> тега <code>&lt;label&gt;</code>.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!-- Хорошо: элемент формы radio связан с подписью через идентификатор --&gt;
 &lt;input type="radio" id="choose"&gt;
@@ -219,7 +259,7 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Размеры картинок</h4>
+  <div class="chapter-part-col"><h4 id="html-img-sizes">Размеры картинок</h4>
 <p>
   Изображениям <code>&lt;img&gt;</code> должны быть явно заданы с&nbsp;помощью атрибута размеры в&nbsp;пикселях или в&nbsp;процентах. В&nbsp;случае пикселей размерность не&nbsp;нужна.
 </p>
@@ -227,7 +267,7 @@
   По&nbsp;возможности изображениям указываются действительные размеры, так как это улучшает производительность отрисовки страницы: браузер не&nbsp;будет перерисовывать страницу в&nbsp;процессе загрузки и&nbsp;отображения изображения.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!-- Хорошо: размеры картинке заданы --&gt;
 &lt;div class="logo-area"&gt;
@@ -249,12 +289,12 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Атрибут языка</h4>
+  <div class="chapter-part-col"><h4 id="html-language">Атрибут языка</h4>
 <p>
   Для элемента <code>&lt;html&gt;</code> в&nbsp;атрибуте <code>lang</code> должен указываться соответствующий язык документа. Это помогает инструментам синтеза речи определить, какое использовать произношение или системам перевода, какие использовать языковые правила.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!DOCTYPE html&gt;
 &lt;html lang="ru"&gt;
@@ -269,7 +309,7 @@
 
       <section class="chapter">
         <h2>CSS</h2><article class="chapter-part">
-  <div class="chapter-part-col"><h4>Синтаксис</h4>
+  <div class="chapter-part-col"><h4 id="css-syntax">Синтаксис</h4>
 <ul>
   <li>После значения свойства обязательно ставится точка с&nbsp;запятой.</li>
   <li>Для отступов внутри правил используются два пробела. Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</li>
@@ -291,7 +331,7 @@
   <li>Для автоматического применения этих правил используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/csscomb.json" target="_blank">csscomb.json</a> для настройки <a href="http://csscomb.com" target="_blank">CSSComb</a>.</li>
 </ul>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">/* Хорошо */
 .selector,
@@ -315,7 +355,7 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Порядок свойств</h4>
+  <div class="chapter-part-col"><h4 id="css-order">Порядок свойств</h4>
 <p>
   Объявления логически связанных свойств группируются в&nbsp;следующем порядке:
 </p>
@@ -340,7 +380,7 @@
   Порядок объявления подробных правил, таких как <code>font-size</code>, <code>font-family</code>, <code>line-height</code>, должен соответствовать порядку в&nbsp;сокращённой версии правила. В&nbsp;случае совместного использования подробных и&nbsp;сокращённых правил, первой должна идти сокращённая версия.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">.declaration-order {
   /* Позиционирование */
@@ -386,14 +426,14 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Имена классов</h4>
+  <div class="chapter-part-col"><h4 id="css-class-names">Имена классов</h4>
 <ul>
   <li>Имена классов пишутся строчными буквами, используется дефис (но&nbsp;не&nbsp;знаки нижнего подчёркивания или camelCase). Дефисы служат разделителями во&nbsp;взаимосвязанных классах (например, <code>.button</code> и <code>.button-danger</code>).</li>
   <li>Имена классов должны быть такими, чтобы по&nbsp;ним можно было быстро понять какому элементу страницы задан класс: избегайте сокращений (единственное исключение&nbsp;&mdash; <code>.btn</code> для кнопок), но&nbsp;не&nbsp;делайте их&nbsp;слишком длинными (более трёх слов).</li>
   <li>Для написания классов используются английские слова и&nbsp;термины. Транслитом названия классов и&nbsp;атрибутов не&nbsp;пишутся.</li>
 </ul>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">/* Хорошо */
 .alert-danger { … }
@@ -412,12 +452,12 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Правило <code>@import</code></h4>
+  <div class="chapter-part-col"><h4 id="css-import">Правило <code>@import</code></h4>
 <p>
   Правило <code>@import</code> работает медленнее, чем тег <code>&lt;link&gt;</code>. В&nbsp;стилях <code>@import</code> не&nbsp;должен использоваться.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-markup">&lt;!-- Хорошо: подключение тегом link --&gt;
 &lt;link rel="stylesheet" href="module.css"&gt;
@@ -432,7 +472,7 @@
 </article>
 
 <article class="chapter-part">
-  <div class="chapter-part-col"><h4>Варианты шрифта</h4>
+  <div class="chapter-part-col"><h4 id="css-font-variant">Варианты шрифта</h4>
 <p>
   Альтернативные варианты шрифта и&nbsp;тип семейства указываются в&nbsp;конце перечисления <code>font-family</code>.
 </p>
@@ -451,7 +491,7 @@
   Список веб-безопасных шрифтов можно посмотреть здесь&nbsp;&mdash; <a href="http://www.cssfontstack.com" target="_blank">cssfontstack.com</a>.
 </p>
 </div>
-  <div class="chapter-part-col">
+  <div class="chapter-part-col gray-bgcolor">
     <figure>
       <pre><code class="language-css">/* Хорошо: указан альтернативный веб-безопасный шрифт и его тип семейства */
 body {
