--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="https://htmlacademy.github.io/codeguide/">
     <meta property="og:title" itemprop="name" content="Стиль кода Академии HTML">
     <meta property="og:image" itemprop="image" content="https://htmlacademy.github.io/codeguide/img/og.png">
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-29640059-7','auto');ga('send','pageview');</script>
   </head>
   <body>
 
@@ -19,6 +20,7 @@
     <img class="logo" src="img/bane.svg" width="300" height="300" alt="HTML Academy" title="HTML Academy">
   </a>
   <h1>Стиль кода Академии HTML</h1>
+  <p><a href="https://github.com/htmlacademy/codeguide">github.com/htmlacademy/codeguide</a></p>
 </header>
 <section class="chapter">
         <h2>Оглавление</h2>
