Правит одно и правил

--- a/html-css.html
+++ b/html-css.html
@@ -275,7 +275,7 @@
           <div class="chapter-part-col">
             <h4 id="html-img-sizes">Размеры картинок</h4>
             <p>
-              Изображениям <code>&lt;img&gt;</code> должны быть явно заданы с&nbsp;помощью атрибута размеры в&nbsp;пикселях или в&nbsp;процентах. В&nbsp;случае пикселей размерность не&nbsp;нужна.
+              Изображениям <code>&lt;img&gt;</code> должны быть явно заданы с&nbsp;помощью атрибута размеры в&nbsp;пикселях. В&nbsp;случае пикселей размерность не&nbsp;нужна.
             </p>
             <p>
               По&nbsp;возможности изображениям указываются действительные размеры, так как это улучшает производительность отрисовки страницы: браузер не&nbsp;будет перерисовывать страницу в&nbsp;процессе загрузки и&nbsp;отображения изображения.
