РАсставляет теги code

--- a/javascript.html
+++ b/javascript.html
@@ -156,7 +156,7 @@
 
               <li>При описании функций запрещено дублировать названия параметров.</li>
 
-              <li>В операторе `switch` запрещено дублировать условия (case)</li>
+              <li>В операторе <code>switch</code> запрещено дублировать условия (case)</li>
 
               <h5>Массивы</h5>
             </ul>
@@ -190,11 +190,11 @@
 
               <li>Запрещено называть переменные и свойства ключевыми словами JS</li>
 
-              <li>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта `window/global`.</li>
+              <li>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта <code>window/global</code>.</li>
 
               <li>Запрещено объявлять переменные без значения.</li>
 
-              <li>Запрещено напрямую обращаться к значению `undefined`. Для проверки типа рекомендуется использовать `typeof`. Для прямого сравнения с `undefined` можно использовать конструкцию `void 0`</li>
+              <li>Запрещено напрямую обращаться к значению <code>undefined</code>. Для проверки типа рекомендуется использовать <code>typeof</code>. Для прямого сравнения с <code>undefined</code> можно использовать конструкцию <code>void 0</code>.</li>
 
               <li>С заглавной буквы называются только функции-конструкторы.</li>
             </ul>
@@ -217,7 +217,7 @@
 
               <li>В коде нет пустых блоков кода</li>
 
-              <li>Код работает в строгом режиме: в начале всех файлов явно прописана директива `use strict`.</li>
+              <li>Код работает в строгом режиме: в начале всех файлов явно прописана директива <code>use strict</code>.</li>
             </ul>
           </div>
         </article>
@@ -235,7 +235,7 @@
 
               <li>В условтях не используется небезопасное отрицание, например использование ! в in или instanceof без скобок.</li>
 
-              <li>Запрещено сравнение с NaN. Для проверки, является результат операции числовым, нужно использовать `isNaN`.</li>
+              <li>Запрещено сравнение с NaN. Для проверки, является результат операции числовым, нужно использовать <code>isNaN</code>.</li>
 
               <li>Запрещено использовать case без break или return в блоках switch.</li>
 
@@ -248,7 +248,7 @@
           <div class="chapter-part-col">
             <h4 id="">Функции</h4>
             <ul>
-              <li>Если в функции используется ветвление, в котором есть возврат значения (`return`), `return` должен быть добавлен и в остальных ветках. Это правило предотвращает создание функций, при использовании которых непонятно, вернут ли они какое-то значение. <pre class="language-js"><code>- var do = function() {
+              <li>Если в функции используется ветвление, в котором есть возврат значения (<code>return</code>), <code>return</code> должен быть добавлен и в остальных ветках. Это правило предотвращает создание функций, при использовании которых непонятно, вернут ли они какое-то значение. <pre class="language-js"><code>- var do = function() {
 -   if (cond) {
 -     return 1;
 -   } else {
@@ -295,7 +295,7 @@
 
               <li>Запрещено переопределять с помощью ключевого слова ранее созданные переменные</li>
 
-              <li>Запрещено использовать множественное объявление через одно ключевое слово. Для каждой переменной используется отдельный `var`, `let` или `const`. Это правило облегчает отладку, поскольку создание нескольких переменных через запятую трактуются движком как одна операция, что означает, что невозможно поставить отладчик на создание одной из переменных. <pre class="language-js"><code>- var a = 1, b = 2;
+              <li>Запрещено использовать множественное объявление через одно ключевое слово. Для каждой переменной используется отдельный <code>var</code>, <code>let</code> или <code>const</code>. Это правило облегчает отладку, поскольку создание нескольких переменных через запятую трактуются движком как одна операция, что означает, что невозможно поставить отладчик на создание одной из переменных. <pre class="language-js"><code>- var a = 1, b = 2;
 -
 + var a = 1;
 + var b = 2;
@@ -311,26 +311,26 @@
 
               <li>Запрещено объявление значений внутри блоков</li>
 
-              <li>Новые функции не создаются с помощью конструктора `Function`</li>
+              <li>Новые функции не создаются с помощью конструктора <code>Function</code></li>
 
-              <li>Вместо коллекции `arguments`, используется rest-оператор</li>
+              <li>Вместо коллекции <code>arguments</code>, используется rest-оператор</li>
 
-              <li>Вместо вызова функции через `apply` используется spread-оператор</li>
+              <li>Вместо вызова функции через <code>apply</code> используется spread-оператор</li>
             </ul>
 
             <h5 id="">Создание значений</h5>
             <ul>
-              <li>Не вызываются служебные конструкторы, создающие объекты из глобальной области видимости `Math(), JSON(), Reflect()`.</li>
+              <li>Не вызываются служебные конструкторы, создающие объекты из глобальной области видимости <code>Math(), JSON(), Reflect()</code>.</li>
 
               <li>При создании непустых массивов запрещено опускать пустые значения (ставить подряд несколько запятых)</li>
 
               <li>При создании непустых объектов и массивов не используются «висячие» запятые</li>
 
-              <li>Не используются конструкторы примитивов, которые используются для автобоксинга `String`, `Number`, `Boolean`</li>
+              <li>Не используются конструкторы примитивов, которые используются для автобоксинга <code>String</code>, <code>Number</code>, <code>Boolean</code></li>
 
               <li>Конструкторы вызываются со скобками, даже если у них нет параметров.</li>
 
-              <li>Символы (`Symbol`) создаются вызовом функции `Symbol` без ключевого слова `new`.</li>
+              <li>Символы (<code>Symbol</code>) создаются вызовом функции <code>Symbol</code> без ключевого слова <code>new</code>.</li>
             </ul>
           </div>
         </article>
@@ -339,17 +339,17 @@
           <div class="chapter-part-col">
             <h4 id="">Хорошие практики</h4>
             <ul>
-              <li>Не используется конструкция `with`.</li>
+              <li>Не используется конструкция <code>with</code>.</li>
 
-              <li>Не используются `alert`.</li>
+              <li>Не используются <code>alert</code>.</li>
 
-              <li>Не используется выполнение кода через `eval`.</li>
+              <li>Не используется выполнение кода через <code>eval</code>.</li>
 
-              <li>Не используется неявный eval — в функциях, которые поддерживают передачу исполняемого кода как строку, например `setTimeout`.</li>
+              <li>Не используется неявный eval — в функциях, которые поддерживают передачу исполняемого кода как строку, например <code>setTimeout</code>.</li>
 
               <li>Не используется протокол javascript.</li>
 
-              <li>Конструкторы не используются без ключевого слова `new`.</li>
+              <li>Конструкторы не используются без ключевого слова <code>new</code>.</li>
             </ul>
 
             <h5>Манкипатчинг</h5>
@@ -357,19 +357,19 @@
             <ul>
               <li>Встроенные в язык объекты и прототипы не расширяются в рантайме</li>
 
-              <li>Не переопределяются глобальные значения (undefined, null, Object, window и прочие)</li>
+              <li>Не переопределяются глобальные значения (<code>undefined</code>, <code>null</code>, <code>Object</code>, <code>window</code> и прочие)</li>
             </ul>
 
             <h5>Контекст</h5>
             <ul>
               <li>bind не используется вне методов классов</li>
 
-              <li>в функциях, которые не являются методами никакого объекта или класса не используется `this`</li>
+              <li>в функциях, которые не являются методами никакого объекта или класса не используется <code>this</code></li>
             </ul>
 
             <h5>Переменные</h5>
             <ul>
-              <li>Переменные, объявленные через `var` не удаляются оператором `delete`</li>
+              <li>Переменные, объявленные через <code>var</code> не удаляются оператором <code>delete</code></li>
             </ul>
           </div>
         </article>
@@ -378,11 +378,11 @@
           <div class="chapter-part-col">
             <h4 id="">Приведение типов</h4>
             <ul>
-              <li>Не используется лишнее приведение к Boolean. Например, нет большого смысла переводить в boolean условия в конструкциях `if`, `while`, `for`, в первом операнде тернарного оператора</li>
+              <li>Не используется лишнее приведение к Boolean. Например, нет большого смысла переводить в boolean условия в конструкциях <code>if</code>, <code>while</code>, <code>for</code>, в первом операнде тернарного оператора</li>
 
-              <li>Оператор `typeof` используется корректно — используются только правильные значения, возвращаемые оператором, не производится сравнения со строковыми литералами, которые содержат некорректные значения `typeof`</li>
+              <li>Оператор <code>typeof</code> используется корректно — используются только правильные значения, возвращаемые оператором, не производится сравнения со строковыми литералами, которые содержат некорректные значения <code>typeof</code></li>
 
-              <li>В `parseInt` обязательно передается второй параметр — основание системы счисления, даже в случае с десятичной системой счисления</li>
+              <li>В <code>parseInt</code> обязательно передается второй параметр — основание системы счисления, даже в случае с десятичной системой счисления</li>
             </ul>
 
             <h5>Константы в условиях</h5>
@@ -454,13 +454,13 @@
             <h4 id="">Обработка ошибок и исключения</h4>
             <ul>
               <li>
-                Для выбрасывания исключения в оператор `throw` передаются только объекты Error. Передавать литералы запрещено.<pre class="language-js"><code>- throw 'Passed value is out of range';
+                Для выбрасывания исключения в оператор <code>throw</code> передаются только объекты Error. Передавать литералы запрещено.<pre class="language-js"><code>- throw 'Passed value is out of range';
 + throw new RangeError('Rassed value is out of range');</code></pre></li>
             </ul>
 
             <h5>try..catch с пустым try</h5>
             <ul>
-              <li>В конструкции `try..catch` запрещен пустой блок `try`</li>
+              <li>В конструкции <code>try..catch</code> запрещен пустой блок <code>try</code></li>
             </ul>
           </div>
         </article>
@@ -477,7 +477,7 @@
             <ul>
               <li>необязательно добавлять текстовое описание конструкциям @return и @param, достаточно просто указания типа и названия параметра для @param</li>
 
-              <li>описание возвращаемного типа @return требуется только в том случае, если функция возвращает какое-то значение. Правило не действует для конструкторов, для них указывать @return необязательно. Также необязательно указывать тег @return для функций, в которых конструкуия `return` используется без возвращаемого значения для выхода из функции</li>
+              <li>описание возвращаемного типа @return требуется только в том случае, если функция возвращает какое-то значение. Правило не действует для конструкторов, для них указывать @return необязательно. Также необязательно указывать тег @return для функций, в которых конструкуия <code>return</code> используется без возвращаемого значения для выхода из функции</li>
 
               <li>для описания возвращаемого значения из функции используется тег @return, а не @returns</li>
             </ul>
@@ -492,14 +492,14 @@
         <article class="chapter-part">
           <div class="chapter-part-col">
             <ul>
-              <li>При итерировании по объектам через `for..in` при работе со свойствами используется конструкция `hasOwnProperty`</li>
+              <li>При итерировании по объектам через <code>for..in</code> при работе со свойствами используется конструкция <code>hasOwnProperty</code></li>
 
-              <li>В функциях не используются обращения к `caller` и `callee`</li>
+              <li>В функциях не используются обращения к <code>caller</code> и <code>callee</code></li>
 
-              <li>В объектах напрямую не переопределяется свойство `__iterator__`</li>
+              <li>В объектах напрямую не переопределяется свойство <code>__iterator__</code></li>
 
               <li>
-                В объектах напрямую не переопределяется свойство `__proto__`. Разрешено переопределять `__proto__` через `Object.create` или запись в прототип, объектов, созданных другими конструкторами, но напрямую редактировать `__proto__` нельзя<pre class="language-js"><code>- var obj = {
+                В объектах напрямую не переопределяется свойство <code>__proto__</code>. Разрешено переопределять <code>__proto__</code> через <code>Object.create</code> или запись в прототип, объектов, созданных другими конструкторами, но напрямую редактировать <code>__proto__</code> нельзя<pre class="language-js"><code>- var obj = {
 -   __proto__: Parent
 - };
 +
@@ -509,12 +509,12 @@
 +
 + var obj = Object.create(Parent.prototype);</code></pre></li>
 
-              <li>В коде не используются лейблы. Лейблы используются с конструкциями `break` и `continue` для направленного выхода из цикла и могут привести к слишком сложному для понимания коду</li>
+              <li>В коде не используются лейблы. Лейблы используются с конструкциями <code>break</code> и <code>continue</code> для направленного выхода из цикла и могут привести к слишком сложному для понимания коду</li>
 
-              <li>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора `switch` и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использваться сами по себе, любой блок должен быть частью другого выражения.</li>
+              <li>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора <code>switch</code> и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использваться сами по себе, любой блок должен быть частью другого выражения.</li>
 
               <li>
-                В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова `let`, `const`, `var`, в операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора `for`<pre class="language-js"><code>- const result = (1, 2); // 2
+                В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова <code>let</code>, <code>const</code>, <code>var</code>, в операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора <code>for</code><pre class="language-js"><code>- const result = (1, 2); // 2
 + const result = 2;
 
 - switch (val = getVal(), val) {}
@@ -532,7 +532,7 @@
             <ul>
               <li>В регулярных выражениях не используются «управляющие выражения»</li>
 
-              <li>В регулярных выражениях не используются пустые классы символов `[]` (блоки, ограниченные квадратными скобками)</li>
+              <li>В регулярных выражениях не используются пустые классы символов <code>[]</code> (блоки, ограниченные квадратными скобками)</li>
 
               <li>В коде регулярные выражения не создаются через конструктор RegExp из строки, которая не может быть разобрана как правильное регулярное выражение</li>
 
@@ -552,7 +552,7 @@
         <article class="chapter-part">
           <div class="chapter-part-col">
             <ul>
-              <li>В node.js файлах не используется конструкция `process.exit`.</li>
+              <li>В node.js файлах не используется конструкция <code>process.exit</code>.</li>
             </ul>
           </div>
         </article>
