Добавляет форматирование кода

--- a/javascript.html
+++ b/javascript.html
@@ -82,11 +82,11 @@
 
               <li>При объявлении вычисляемых ключей в объектах с помощью синтаксиса ES2016 в квадратных скобках не используются пробелы</li>
 
-              <li>Оператор вызова функции () не отделяется круглыми скобками от названия функции</li>
+              <li>Оператор вызова функции <code>()</code> не отделяется круглыми скобками от названия функции</li>
 
               <li>В объектах после объявления ключа не ставится пробел. После двоеточия, которое отделяет в объектах ключ от значения может стоять только один пробел, выравнивать несколько значений при объявлении многострочного объекта запрещено</li>
 
-              <li>Ключевые слова отделяются пробелами. Правило касается всех блоков, которые не оговорены отдельно в других правилах. В частности ключевые слова должны отделяться пробелами для условных операторов, циклов, операторов множественного выбора, блоков try..catch, объявлений классов и т. д.</li>
+              <li>Ключевые слова отделяются пробелами. Правило касается всех блоков, которые не оговорены отдельно в других правилах. В частности ключевые слова должны отделяться пробелами для условных операторов, циклов, операторов множественного выбора, блоков <code>try..catch</code>, объявлений классов и т. д.</li>
 
               <li>В блоках кода первая и последняя строка не должны быть пустыми (код не отбивается от начала блока кода)</li>
 
@@ -94,15 +94,15 @@
 
               <li>Перед скобками начинающими новый блок кода должен ставиться пробел</li>
 
-              <li>При объявлении анонимных функций, скобки с параметрами отделаются пробелом от ключевого слова function. Если функция именована, перед названием ставится пробел, после — нет</li>
+              <li>При объявлении анонимных функций, скобки с параметрами отделаются пробелом от ключевого слова <code>function</code>. Если функция именована, перед названием ставится пробел, после — нет</li>
 
               <li>В комментариях текст отбивается пробелом от начала комментария</li>
 
-              <li>При создании генераторов, звездочка идет сразу после ключевого слова function без пробелов</li>
+              <li>При создании генераторов, звездочка идет сразу после ключевого слова <code>function</code> без пробелов</li>
 
               <li>В spread-операторе точки не отделяются от названия коллекции</li>
 
-              <li>Звездочка после ключевого слова yield не отбивается пробелом. После звездочки пробел ставится всегда</li>
+              <li>Звездочка после ключевого слова <code>yield</code> не отбивается пробелом. После звездочки пробел ставится всегда</li>
             </ul>
           </div>
         </article>
