Исправляет кавычки на елочки в гайде JS

--- a/javascript.html
+++ b/javascript.html
@@ -219,7 +219,7 @@
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3 id="">Условные операторы</h3>
             <ul>
-              <li>Запрещена "проверка Йоды" — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоброт.
+              <li>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоброт.
 <pre class="language-js language-incorrect"><code>if (1 === myValue) {}
 </code></pre>
 
