--- a/javascript.html
+++ b/javascript.html
@@ -42,7 +42,7 @@
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Отступы, пробелы и переносы</h3>
+            <h3>Отступы, пробелы и переносы</h3>
 
             <blockquote>Для правильного форматирования используйте файл .editorconfig в&nbsp;вашем редакторе.</blockquote>
 
@@ -124,7 +124,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Строки</h3>
+            <h3>Строки</h3>
             <p>В строках, объявленных с помощью одинарных и двойных кавычек запрещено использовать переносы</p>
 
             <p>В строках запрещено указывать код спецсимволов в восьмеричной системе счисления
@@ -143,7 +143,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Числа</h3>
+            <h3>Числа</h3>
             <p>В числах запрещено опускать ноль в дробной и целой части</p>
 
             <p>Запрещено использовать ведущий ноль при создании чисел, поскольку это приводит к созданию числа в восьмеричной системе счисления</p>
@@ -152,7 +152,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Литералы</h3>
+            <h3>Литералы</h3>
             <p>Массивы должны создаваться через литерал массива, а не через конструктор. Допустимое исключение — создание массива определенной длины</p>
 
             <p>Объекты должны создаваться через литерал объекта, а не через конструктор</p>
@@ -167,7 +167,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Операторы</h3>
+            <h3>Операторы</h3>
             <p>В бинарных и тернарных операторах операнды и символы оператора отделяются пробелами</p>
 
             <p>Унарные операторы не отделяются от операнда пробелом. Исключения составляют операторы, состоящие из слов, а не символов, например оператор <code>typeof</code></p>
@@ -220,7 +220,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Условные операторы</h3>
+            <h3>Условные операторы</h3>
             <p>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоброт.
 <pre class="language-js language-incorrect"><code>if (1 === myValue) {}
 </code></pre>
@@ -244,7 +244,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Функции</h3>
+            <h3>Функции</h3>
             <p>Если в функции используется ветвление, в котором есть возврат значения (<code>return</code>), <code>return</code> должен быть добавлен и в остальных ветках.</p>
 
 <pre class="language-js language-incorrect"><code>var do = function() {
@@ -275,7 +275,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Операторы</h3>
+            <h3>Операторы</h3>
             <p>В конструкторе классов-наследников обязательно вызывается <code>super()</code></p>
 
             <p>В конструкторе нет обращения к <code>this</code> до того, как будет вызван <code>super()</code></p>
@@ -284,7 +284,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Объявление переменных и функций</h3>
+            <h3>Объявление переменных и функций</h3>
             <p>При объявлении переменных предпочтение отдается ключевым словам <code>let</code> и <code>const</code>. Переменные объявляются через <code>var</code> только при наличии проблем с поддержкой кода</p>
 
             <p>Запрещено переопределять с помощью ключевого слова ранее созданные переменные</p>
@@ -298,7 +298,7 @@ var b = 2;
 </code></pre>
             </p>
 
-            <h4 id="">Объявление функций</h4>
+            <h4>Объявление функций</h4>
             <p>Запрещено переопределение функций, созданных с помощью функционального объявления (function declaration)
 <pre class="language-js language-incorrect"><code>function myFunc() {};
 myFunc = 2;
@@ -319,7 +319,7 @@ myFunc = 2;
 </code></pre>
             </p>
 
-            <h4 id="">Создание значений</h4>
+            <h4>Создание значений</h4>
             <p>Не вызываются служебные конструкторы, создающие объекты из глобальной области видимости <code>Math()</code>, <code>JSON()</code>, <code>Reflect()</code></p>
 
             <p>При создании непустых массивов запрещено опускать пустые значения (ставить подряд несколько запятых)</p>
@@ -336,7 +336,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Хорошие практики</h3>
+            <h3>Хорошие практики</h3>
             <p>Не используется конструкция <code>with</code></p>
 
             <p>Не используются <code>alert</code></p>
@@ -369,7 +369,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Приведение типов</h3>
+            <h3>Приведение типов</h3>
             <p>Не используется лишнее приведение к Boolean. Например, нет большого смысла переводить в boolean условия в конструкциях <code>if</code>, <code>while</code>, <code>for</code>, в первом операнде тернарного оператора</p>
 
             <p>Оператор <code>typeof</code> используется корректно — используются только правильные значения, возвращаемые оператором, не производится сравнения со строковыми литералами, которые содержат некорректные значения <code>typeof</code></p>
@@ -401,14 +401,14 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Лишние символы</h3>
+            <h3>Лишние символы</h3>
             <p>Не используются лишние (множественные) точки с запятой</p>
           </div>
         </article>
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Отладчик и консоль</h3>
+            <h3>Отладчик и консоль</h3>
             <p>В коде не используется оставленных выводов в консоль</p>
 
             <p>В коде нет забытых инструкций <code>debugger</code></p>
@@ -417,7 +417,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Неиспользуемый код</h3>
+            <h3>Неиспользуемый код</h3>
             <p>В проекте нет недоступного кода, который никогда не выполнится
 
 <pre class="language-js language-incorrect"><code>if (false) {
@@ -448,7 +448,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Обработка ошибок и исключения</h3>
+            <h3>Обработка ошибок и исключения</h3>
             <p>Для выбрасывания исключения в оператор <code>throw</code> передаются только объекты Error. Передавать литералы запрещено.
 
 <pre class="language-js language-incorrect"><code>throw 'Passed value is out of range';
@@ -528,7 +528,7 @@ for (var i = 0, l = 100; i < l; i++);
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Регулярные выражения</h3>
+            <h3>Регулярные выражения</h3>
             <p>В регулярных выражениях не используются «управляющие выражения»</p>
 
             <p>В регулярных выражениях не используются пустые классы символов <code>[]</code> (блоки, ограниченные квадратными скобками)</p>
@@ -551,7 +551,7 @@ for (var i = 0, l = 100; i < l; i++);
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3 id="">Node.js</h3>
+            <h3>Node.js</h3>
 
             <p>В Node.js файлах не используется конструкция <code>process.exit</code></p>
           </div>
